add index.html, style css. rename style.css to style-old.css, add icon folder in ./assets/image/

--- a/Motorcycle-Sales-Page.html
+++ b/Motorcycle-Sales-Page.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motorcyle-Sales-Page</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style-old.css">
     <link rel="stylesheet" href="./assets/font/themify-icons-font/themify-icons/themify-icons.css">
 </head>
 <body>
@@ -13,31 +13,62 @@
         <div id="header">
             <!-- Begin nav -->
             <ul id="nav">
-                <li><a href="">TRANG CHỦ</a></li>
+                <li>
+                    <a href="">TRANG CHỦ</a>
+                </li>
                 <li>
                     <a href="">SẢN PHẨM</a>
                     <ul class="subnav">
-                        <li><a href="">Xe 50cc</a></li>
-                        <li><a href="">Xe số</a></li>
-                        <li><a href="">Xe tay ga</a></li>
-                        <li><a href="">Xe motor</a></li>
+                        <li>
+                            <a href="">Xe 50cc</a>
+                        </li>
+                        <li>
+                            <a href="">Xe số</a>
+                        </li>
+                        <li>
+                            <a href="">Xe tay ga</a>
+                        </li>
+                        <li>
+                            <a href="">Xe motor</a>
+                        </li>
                     </ul>
                 </li>
-                <li><a href="">GIỚI THIỆU</a></li>
+                <li>
+                    <a href="">GIỚI THIỆU</a>
+                </li>
                 <li>
                     <a href="">HÃNG XE</a>
                     <ul class="subnav">
-                        <li><a href="https://www.webike.vn/cho-xe-may/hang-xe/honda-1.html">Honda</a></li>
-                        <li><a href="">Yamaha</a></li>
-                        <li><a href="">SYM</a></li>
-                        <li><a href="">Kawasaki</a></li>
-                        <li><a href="">Piaggio</a></li>
-                        <li><a href="">Ducati</a></li>
-                        <li><a href="">BMW</a></li>
-                        <li><a href="">Daelim</a></li>
-                        <li><a href="">Benelli</a></li>
-                        <li><a href="">Suzuki</a></li>
-                        <!-- <li><a href="">Triumph</a></li> -->
+                        <li>
+                            <a href="https://www.webike.vn/cho-xe-may/hang-xe/honda-1.html">Honda</a>
+                        </li>
+                        <li>
+                            <a href="">Yamaha</a>
+                        </li>
+                        <li>
+                            <a href="">SYM</a>
+                        </li>
+                        <li>
+                            <a href="">Kawasaki</a>
+                        </li>
+                        <li>
+                            <a href="">Piaggio</a>
+                        </li>
+                        <li>
+                            <a href="">Ducati</a>
+                        </li>
+                        <li>
+                            <a href="">BMW</a>
+                        </li>
+                        <li>
+                            <a href="">Daelim</a>
+                        </li>
+                        <li>
+                            <a href="">Benelli</a>
+                        </li>
+                        <li>
+                            <a href="">Suzuki</a>
+                        </li>
                     </ul>
                 </li>
             </ul>
