--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <script
+        src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+        integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+        crossorigin="anonymous">
+    </script>
+
+    <script>
+        $(document).ready(function() {
+            $("#search-box").hover(function() {
+                $("#search-box__input").css("display", "block");
+            });
+            $(this).click(function() {
+                $("#search-box__input").css("display", "none");
+            })
+        });
+    </script>
 </head>
 <body>
     <header>
@@ -41,9 +57,9 @@
                         <a href="">Đăng ký</a>
                     </li>
                 </ul>
-                <div class="search-box">
-                    <input type="text" placeholder="Search...">
-                    <a href="" class="search-btn">
+                <div id="search-box">
+                    <input id="search-box__input" type="text" placeholder="Search...">
+                    <a href="" id="search-btn">
                         <ion-icon class="search-box__icon" name="search-outline"></ion-icon>
                     </a>
                 </div>
