update comment lines

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         crossorigin="anonymous">
     </script>
 
+    <!-- script cho search box -->
     <script>
         $(document).ready(function() {
             $("#search-box").hover(function() {
@@ -32,8 +33,12 @@
     </script>
 </head>
 <body>
+
+    <!-- header -->
     <header>
         <div class="header-box">
+
+            <!-- navigation bar -->
             <ul class="nav-bar__list">
                 <li class="nav-bar__item">
                     <a class="nav-bar__item-link" href="">TRANG CHỦ</a>
@@ -48,6 +53,8 @@
                     <a class="nav-bar__item-link" href="">HÃNG XE</a>
                 </li>
             </ul>
+
+            <!-- phần bên phải bao gồm đăng nhập, đăng kí và search box -->
             <div class="header-right">
                 <ul class="login-box">
                     <li class="login">
@@ -67,10 +74,12 @@
         </div>
     </header>
     
+    <!-- main -->
     <main>
 
     </main>
 
+    <!-- footer -->
     <footer>
 
     </footer>
