--- a/Motorcycle-Sales-Page.html
+++ b/Motorcycle-Sales-Page.html
@@ -7,6 +7,7 @@
     <title>Motorcyle-Sales-Page</title>
     <link rel="stylesheet" href="./assets/css/style-old.css">
     <link rel="stylesheet" href="./assets/font/themify-icons-font/themify-icons/themify-icons.css">
+<!--   comment   -->
 </head>
 <body>
     <div id="main">
