update motocycle sales page
thêm một dòng cmt

--- a/Motorcycle-Sales-Page.html
+++ b/Motorcycle-Sales-Page.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style-old.css">
     <link rel="stylesheet" href="./assets/font/themify-icons-font/themify-icons/themify-icons.css">
 <!--   comment   -->
+<!--    một thằng nào đó thêm một dòng cmt này :)))  -->
 </head>
 <body>
     <div id="main">
