thêm dòng cmt vào dòng thu 11

--- a/Motorcycle-Sales-Page.html
+++ b/Motorcycle-Sales-Page.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style-old.css">
     <link rel="stylesheet" href="./assets/font/themify-icons-font/themify-icons/themify-icons.css">
 <!--   comment   -->
+<!-- đây là dòng dữ liệu thêm vào mà chưa dùng git pull -->
 </head>
 <body>
     <div id="main">
