--- a/index.html
+++ b/index.html
@@ -21,21 +21,7 @@
     </script>
 
     <!-- script cho search box -->
-    <script>
-        $(document).ready(function() {
-            $("#search-box").hover(function() {
-                $("#search-box__input").css({"width": "320px", "padding": "0 12px"});
-                $("#search-box__input").addClass('search-box__expanded');
-            });
-            $(this).click(function() {
-                if ($(this).click != $('#search-box__input')) {
-                    $("#search-box__input").css({"width": "0", "padding": "0"});
-                    $("#search-box__input").removeClass('search-box__expanded');
-                    
-                }
-            });
-        });
-    </script>
+    <script src="./assets/script/script.js"></script>
 </head>
 <body>
 
