add subnav and fix some bugs

--- a/index.html
+++ b/index.html
@@ -36,12 +36,52 @@
                 </li>
                 <li class="nav-bar__item">
                     <a class="nav-bar__item-link" href="">SẢN PHẨM</a>
+                    <ul class="sub-nav__list">
+                        <li class="sub-nav__item">
+                            <a href="">Xe 50cc</a>
+                        </li>
+                        <li class="sub-nav__item">
+                            <a href="">Xe số</a>
+                        </li>
+                        <li class="sub-nav__item">
+                            <a href="">Tay ga</a>
+                        </li>
+                        <li class="sub-nav__item">
+                            <a href="">Motor</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="nav-bar__item">
                     <a class="nav-bar__item-link" href="">GIỚI THIỆU</a>
                 </li>
                 <li class="nav-bar__item">
                     <a class="nav-bar__item-link" href="">HÃNG XE</a>
+                    <ul class="sub-nav__list">
+                        <li class="sub-nav__item">
+                            <a href="">Honda</a>
+                        </li>
+                        <li class="sub-nav__item">
+                            <a href="">Yamaha</a>
+                        </li>
+                        <li class="sub-nav__item">
+                            <a href="">SYM</a>
+                        </li>
+                        <li class="sub-nav__item">
+                            <a href="">Kawasaki</a>
+                        </li>
+                        <li class="sub-nav__item">
+                            <a href="">Piaggio</a>
+                        </li>
+                        <li class="sub-nav__item">
+                            <a href="">Ducati</a>
+                        </li>
+                        <li class="sub-nav__item">
+                            <a href="">BMW</a>
+                        </li>
+                        <li class="sub-nav__item">
+                            <a href="">Daelim</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
 
