--- a/index.html
+++ b/index.html
@@ -57,29 +57,45 @@
                 <li class="nav-bar__item">
                     <a class="nav-bar__item-link" href="">HÃNG XE</a>
                     <ul class="sub-nav__list">
-                        <li class="sub-nav__item">
+                        <li class="sub-nav__item sub-nav__item--has-img">
+                            <img src="./assets/image/motor-brand/honda.jpg" alt="">
                             <a href="">Honda</a>
                         </li>
-                        <li class="sub-nav__item">
+                        <li class="sub-nav__item sub-nav__item--has-img">
+                            <img src="./assets/image/motor-brand/yamaha.jpg" alt="">
                             <a href="">Yamaha</a>
                         </li>
-                        <li class="sub-nav__item">
+                        <li class="sub-nav__item sub-nav__item--has-img">
+                            <img src="./assets/image/motor-brand/sym.jpg" alt="">
                             <a href="">SYM</a>
                         </li>
-                        <li class="sub-nav__item">
+                        <li class="sub-nav__item sub-nav__item--has-img">
+                            <img src="./assets/image/motor-brand/kawasaki.jpg" alt="">
                             <a href="">Kawasaki</a>
                         </li>
-                        <li class="sub-nav__item">
+                        <li class="sub-nav__item sub-nav__item--has-img">
+                            <img src="./assets/image/motor-brand/piaggio.jpg" alt="">
                             <a href="">Piaggio</a>
                         </li>
-                        <li class="sub-nav__item">
+                        <li class="sub-nav__item sub-nav__item--has-img">
+                            <img src="./assets/image/motor-brand/ducati.jpg" alt="">
                             <a href="">Ducati</a>
                         </li>
-                        <li class="sub-nav__item">
+                        <li class="sub-nav__item sub-nav__item--has-img">
+                            <img src="./assets/image/motor-brand/bmw.jpg" alt="">
                             <a href="">BMW</a>
                         </li>
-                        <li class="sub-nav__item">
+                        <li class="sub-nav__item sub-nav__item--has-img">
+                            <img src="./assets/image/motor-brand/daelim.jpg" alt="">
                             <a href="">Daelim</a>
+                        </li>
+                        <li class="sub-nav__item sub-nav__item--has-img">
+                            <img src="./assets/image/motor-brand/benelli.jpg" alt="">
+                            <a href="">Benelli</a>
+                        </li>
+                        <li class="sub-nav__item sub-nav__item--has-img">
+                            <img src="./assets/image/motor-brand/suzuki.jpg" alt="">
+                            <a href="">Suzuki</a>
                         </li>
                     </ul>
                 </li>
@@ -110,7 +126,7 @@
     
     <!-- main -->
     <main>
-
+        <img src="./assets/image/slide/image1.jpg" alt="" class="banner">
     </main>
 
     <!-- footer -->
