add dropdown icon on navigation bar

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 </li>
                 <li class="nav-bar__item">
                     <a class="nav-bar__item-link" href="">SẢN PHẨM</a>
+                    <ion-icon class="nav-bar__dropdown-icon" name="chevron-down-outline"></ion-icon>
                     <ul class="sub-nav__list">
                         <li class="sub-nav__item">
                             <a href="">Xe 50cc</a>
@@ -56,6 +57,7 @@
                 </li>
                 <li class="nav-bar__item">
                     <a class="nav-bar__item-link" href="">HÃNG XE</a>
+                    <ion-icon class="nav-bar__dropdown-icon" name="chevron-down-outline"></ion-icon>
                     <ul class="sub-nav__list">
                         <li class="sub-nav__item sub-nav__item--has-img">
                             <img src="./assets/image/motor-brand/honda.jpg" alt="">
