add search-history, update css

--- a/index.html
+++ b/index.html
@@ -115,11 +115,27 @@
                     </li>
                 </ul>
 
-                <div id="search-box">
-                    <input id="search-box__input" type="text" placeholder="Tìm kiếm...">
-                    <a href="" id="search-btn">
-                        <ion-icon class="search-box__icon" name="search-outline"></ion-icon>
+                <div class="search-box">
+                    <input class="search-box__input" type="text" placeholder="Tìm kiếm...">
+                    <a href="" class="search-btn">
+                        <ion-icon name="search-outline"></ion-icon>
                     </a>
+
+                    <ul class="search-history__list">
+                        <li class="search-history__item">
+                            <span class="search-history__item-link">suzuki xl7</span>
+                            <ion-icon class="search-history__item-close" name="close-outline"></ion-icon>
+                        </li>
+                        <li class="search-history__item">
+                            <span class="search-history__item-link">bmw s1000rr</span>
+                            <ion-icon class="search-history__item-close" name="close-outline"></ion-icon>
+                        </li>
+                        <li class="search-history__item">
+                            <span class="search-history__item-link">yamaha yzf-r6</span>
+                            <ion-icon class="search-history__item-close" name="close-outline"></ion-icon>
+                        </li>
+                    </ul>
+
                 </div>
 
             </div>
