--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                         
                         </li>
                         <div class="footer__logo">
-                            <img src="http://online.gov.vn/Content/EndUser/LogoCCDVSaleNoti/logoSaleNoti.png" alt="Download QR" class="logo_BoCT">
+                            <img src="./assets/image/anhBoCongThuong/logoSaleNoti.png" alt="Bộ Công Thương" class="logo_BoCT">
                            
                     </ul>
                 </div>
