update cac trang

--- a/xetayga.html
+++ b/xetayga.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MotoSales.vn</title>
+    <title>Xe tay ga</title>
     <link rel="shortcut icon" href="./assets/image/icon/icon.png">
     <link rel="stylesheet" href="./assets/css/style.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
@@ -34,7 +34,7 @@
             <!-- navigation bar -->
             <ul class="nav-bar__list">
                 <li class="nav-bar__item">
-                    <a class="nav-bar__item-link" href="#">TRANG CHỦ</a>
+                    <a class="nav-bar__item-link" href="index.html">TRANG CHỦ</a>
                 </li>
                 <li class="nav-bar__item">
                     <a class="nav-bar__item-link" href="">SẢN PHẨM</a>
@@ -261,59 +261,59 @@
                             <a href="xecontay.html" class="ct_name_5">Xe côn tay</a>
                         </li>
                     </ul>
-                    <h3 class="ct_list">Xe mới đăng</h3>
+                    <h3 class="ct_list">Xe tay ga</h3>
                     <div id="list_container">
                         <ul id="motor_list_1">
                             <li class="product_1">
-                                <a href="#"><img src="./assets/image/hinhxemay/honda1.png" alt="" class="sample_1"></a>
+                                <a href="#"><img src="./assets/image/hinhxemay/Vision.png" alt="" class="sample_1"></a>
                                 <br>
-                                <a href="#" class="motor_name">XE MÁY HONDA FUTURE 125 FI <br> <center>VÀNH ĐÚC</center></a>
-                                <p class="price_1">31.390.000 VNĐ</p>
+                                <a href="#" class="motor_name_3">XE TAY GA HONDA VISION</a>
+                                <p class="price_1">30.230.182 VNĐ</p>
                             </li>
                             <li class="product_2">
-                                <a href="#"><img src="./assets/image/hinhxemay/SYM5.png" alt="" class="sample_2"></a>
+                                <a href="#"><img src="./assets/image/hinhxemay/Honda4.png" alt="" class="sample_2"></a>
                                 <br>
-                                <a href="#" class="motor_name">XE MÁY TAY GA SYM ATTILA 50CC</a>
-                                <p class="price_2">25.700.000 VNĐ</p>
+                                <a href="#" class="motor_name">XE TAY GA HONDA SH125i/150i</a>
+                                <p class="price_2">71.957.455 VNĐ</p>
                             </li>
                             <li class="product_3">
-                                <a href="#"><img src="./assets/image/hinhxemay/Daelim2.png" alt="" class="sample_3"></a>
+                                <a href="#"><img src="./assets/image/hinhxemay/Yamaha3.png" alt="" class="sample_3"></a>
                                 <br>
-                                <a href="#" class="motor_name">XE MÁY CUB 81 DAELIM SAVINA <br> <center>CB50</center></a>
-                                <p class="price_3">14.300.000 VNĐ</p>
+                                <a href="#" class="motor_name_3">GRANDE BLUE CORE HYBRID <br><center>PHIÊN BẢN ĐẶC BIỆT</center></a>
+                                <p class="price_3">49.100.000 VNĐ</p>
                             </li>
                             <li class="product_4">
-                                <a href="#"><img src="./assets/image/hinhxemay/yamaha2.jpg" alt="" class="sample_4"></a>
+                                <a href="#"><img src="./assets/image/hinhxemay/Yamaha4.png" alt="" class="sample_4"></a>
                                 <br>
-                                <a href="#" class="motor_name">MÔ TÔ THỂ THAO YAMAHA<br><center>YZF-R3</center></a>
-                                <p class="price_4">129.000.000 VNĐ</p>
+                                <a href="#" class="motor_name_3">JANUS PHIÊN BẢN ĐẶC BIỆT</a>
+                                <p class="price_4">31.400.000 VNĐ</p>
                             </li>
                         </ul>
                         <br>
                         <ul id="motor_list_2">
                             <li class="product_1">
-                                <a href="#"><img src="./assets/image/hinhxemay/benelli2.png" alt="" class="sample_1"></a>
+                                <a href="#"><img src="./assets/image/hinhxemay/Yamaha5.png" alt="" class="sample_1"></a>
                                 <br>
-                                <a href="#" class="motor_name_1">BENELLI VZ125i đỏ</a>
-                                <p class="price_1">23.999.000 VNĐ</p>
+                                <a href="#" class="motor_name_3">XE TAY GA SYM ATTILA 50</a>
+                                <p class="price_1">25.700.000 VNĐ</p>
                             </li>       
                             <li class="product_2">
-                                <a href="#"><img src="./assets/image/hinhxemay/BMW1.png" alt="" class="sample_2"></a>
+                                <a href="#"><img src="./assets/image/hinhxemay/Yamaha6.png" alt="" class="sample_2"></a>
                                 <br>
-                                <a href="#" class="motor_name_2">BMW M1000RR 2022</a>
-                                <p class="price_5">1.600.000.000 VNĐ</p>
+                                <a href="#" class="motor_name_3">XE TAY GA SYM PASSING 50</a>
+                                <p class="price_1">24.200.000 VNĐ</p>
                             </li>
                             <li class="product_3">
-                                <a href="#"><img src="./assets/image/hinhxemay/Suzuki4.jpg" alt="" class="sample_3"></a>
+                                <a href="#"><img src="./assets/image/hinhxemay/Piaggio.png" alt="" class="sample_3"></a>
                                 <br>
-                                <a href="#" class="motor_name_1">YAMAHA GSX-S150</a>
-                                <p class="price_3">64.400.000 VNĐ</p>
+                                <a href="#" class="motor_name_3">XE TAY GA PIAGGIO ZIP 100</a>
+                                <p class="price_3">35,350,000 VNĐ</p>
                             </li>
                             <li class="product_4">
-                                <a href="#"><img src="./assets/image/hinhxemay/Ducati3.jpg" alt="" class="sample_4"></a>
+                                <a href="#"><img src="./assets/image/hinhxemay/Shmode 125cc.png" alt="" class="sample_4"></a>
                                 <br>
-                                <a href="#" class="motor_name_3">MÔ TÔ DUCATI MV AGUSTA <br> <center>U1 MINI 110CC</center></a>
-                                <p class="price_1">26.500.000 VNĐ</p>
+                                <a href="#" class="motor_name_3">HONDA SH MODE 125CC</a>
+                                <p class="price_1">54.186.545 VNĐ</p>
                             </li>
                         </ul>
                     </div>
