--- a/xecontay.html
+++ b/xecontay.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MotoSales.vn</title>
+    <title>Xe côn tay</title>
     <link rel="shortcut icon" href="./assets/image/icon/icon.png">
     <link rel="stylesheet" href="./assets/css/style.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
@@ -34,7 +34,7 @@
             <!-- navigation bar -->
             <ul class="nav-bar__list">
                 <li class="nav-bar__item">
-                    <a class="nav-bar__item-link" href="#">TRANG CHỦ</a>
+                    <a class="nav-bar__item-link" href="index.html">TRANG CHỦ</a>
                 </li>
                 <li class="nav-bar__item">
                     <a class="nav-bar__item-link" href="">SẢN PHẨM</a>
@@ -261,59 +261,59 @@
                             <a href="xecontay.html" class="ct_name_5">Xe côn tay</a>
                         </li>
                     </ul>
-                    <h3 class="ct_list">Xe mới đăng</h3>
+                    <h3 class="ct_list">Xe côn tay</h3>
                     <div id="list_container">
                         <ul id="motor_list_1">
                             <li class="product_1">
-                                <a href="#"><img src="./assets/image/hinhxemay/honda1.png" alt="" class="sample_1"></a>
+                                <a href="#"><img src="./assets/image/hinhxemay/Honda6.png" alt="" class="sample_1"></a>
                                 <br>
-                                <a href="#" class="motor_name">XE MÁY HONDA FUTURE 125 FI <br> <center>VÀNH ĐÚC</center></a>
-                                <p class="price_1">31.390.000 VNĐ</p>
+                                <a href="#" class="motor_name">XE CÔN TAY HONDA WINNER X</a>
+                                <p class="price_1">46.160.000 VNĐ</p>
                             </li>
                             <li class="product_2">
-                                <a href="#"><img src="./assets/image/hinhxemay/SYM5.png" alt="" class="sample_2"></a>
+                                <a href="#"><img src="./assets/image/hinhxemay/Honda7.png" alt="" class="sample_2"></a>
                                 <br>
-                                <a href="#" class="motor_name">XE MÁY TAY GA SYM ATTILA 50CC</a>
-                                <p class="price_2">25.700.000 VNĐ</p>
+                                <a href="#" class="motor_name_3">XE CÔN TAY HONDA CBR150R</a>
+                                <p class="price_2">71.290.000 VNĐ</p>
                             </li>
                             <li class="product_3">
-                                <a href="#"><img src="./assets/image/hinhxemay/Daelim2.png" alt="" class="sample_3"></a>
+                                <a href="#"><img src="./assets/image/hinhxemay/SYM3.jpg" alt="" class="sample_3"></a>
                                 <br>
-                                <a href="#" class="motor_name">XE MÁY CUB 81 DAELIM SAVINA <br> <center>CB50</center></a>
-                                <p class="price_3">14.300.000 VNĐ</p>
+                                <a href="#" class="motor_name">XE CÔN TAY SYM STAR SR 125 EFI</a>
+                                <p class="price_3">28.700.000 VNĐ</p>
                             </li>
                             <li class="product_4">
-                                <a href="#"><img src="./assets/image/hinhxemay/yamaha2.jpg" alt="" class="sample_4"></a>
+                                <a href="#"><img src="./assets/image/hinhxemay/Yamaha7.png" alt="" class="sample_4"></a>
                                 <br>
-                                <a href="#" class="motor_name">MÔ TÔ THỂ THAO YAMAHA<br><center>YZF-R3</center></a>
-                                <p class="price_4">129.000.000 VNĐ</p>
+                                <a href="#" class="motor_name_3">EXCITER 155 VVA PHIÊN BẢN<br><center>60 NĂM YAMAHA TRANH TÀI MOTOGP</center></a>
+                                <p class="price_4">52.190.000 VNĐ</p>
                             </li>
                         </ul>
                         <br>
                         <ul id="motor_list_2">
                             <li class="product_1">
-                                <a href="#"><img src="./assets/image/hinhxemay/benelli2.png" alt="" class="sample_1"></a>
+                                <a href="#"><img src="./assets/image/hinhxemay/Yamaha8.png" alt="" class="sample_1"></a>
                                 <br>
-                                <a href="#" class="motor_name_1">BENELLI VZ125i đỏ</a>
-                                <p class="price_1">23.999.000 VNĐ</p>
+                                <a href="#" class="motor_name_3">EXCITER 155 VVA PHIÊN BẢN <br><center>GIỚI HẠN</center></a>
+                                <p class="price_1">50.790.000 VNĐ</p>
                             </li>       
                             <li class="product_2">
-                                <a href="#"><img src="./assets/image/hinhxemay/BMW1.png" alt="" class="sample_2"></a>
+                                <a href="#"><img src="./assets/image/hinhxemay/Suzuki6.png" alt="" class="sample_2"></a>
                                 <br>
-                                <a href="#" class="motor_name_2">BMW M1000RR 2022</a>
-                                <p class="price_5">1.600.000.000 VNĐ</p>
+                                <a href="#" class="motor_name">SUZUKI SATRIA F150 & ThÔNG SỐ</a>
+                                <p class="price_1">56.500.000 VNĐ</p>
                             </li>
                             <li class="product_3">
-                                <a href="#"><img src="./assets/image/hinhxemay/Suzuki4.jpg" alt="" class="sample_3"></a>
+                                <a href="#"><img src="./assets/image/hinhxemay/Suzuki7.png" alt="" class="sample_3"></a>
                                 <br>
-                                <a href="#" class="motor_name_1">YAMAHA GSX-S150</a>
-                                <p class="price_3">64.400.000 VNĐ</p>
+                                <a href="#" class="motor_name_3">SUZUKI GD110 & ThÔNG SỐ</a>
+                                <p class="price_3">29.500.000 VNĐ</p>
                             </li>
                             <li class="product_4">
-                                <a href="#"><img src="./assets/image/hinhxemay/Ducati3.jpg" alt="" class="sample_4"></a>
+                                <a href="#"><img src="./assets/image/hinhxemay/Honda8.jpg" alt="" class="sample_4"></a>
                                 <br>
-                                <a href="#" class="motor_name_3">MÔ TÔ DUCATI MV AGUSTA <br> <center>U1 MINI 110CC</center></a>
-                                <p class="price_1">26.500.000 VNĐ</p>
+                                <a href="#" class="motor_name">HONDA SONIC 150R VÀ THÔNG SỐ</a>
+                                <p class="price_1">55.590.000 VNĐ</p>
                             </li>
                         </ul>
                     </div>
